--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
+// {
+//     "rewrites": [{ "source": "/", "destination": "/" },
+//     { "source": "/(.*)", "destination": "/" },
+//     { "source": "/login", "destination": "/login" },
+//     { "source": "/register", "destination": "/register" },
+//     { "source": "/assginment", "destination": "/assignment" },
+//     { "source": "/members", "destination": "/members" }]
+// }
+
 {
-    "rewrites": [{ "source": "/", "destination": "/" },
-    { "source": "/(.*)", "destination": "/" },
-    { "source": "/login", "destination": "/login" },
-    { "source": "/register", "destination": "/register" },
-    { "source": "/assginment", "destination": "/assignment" },
-    { "source": "/members", "destination": "/members" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
